feat: Add footer and improve layout
Implements a new footer component displaying copyright and AI attribution.
Updates the layout to accommodate the footer and ensures main content expands.
Refines the header to be sticky and visually appealing.
Updates the page title and charset for better SEO and compatibility.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <meta charset="UTF-g" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MEGAPOST - Conteúdo de Marketing com IA</title>
+    <title>MEGAPOST: Gerador de Anúncios com IA</title>
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
